# chuk-mcp-vfs

./: .gitignore  MANIFEST.in  Makefile  README.md  coverage.xml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
examples/: basic_usage.py
src/chuk_mcp_vfs/: __init__.py  checkpoint_manager.py  checkpoint_tools.py  models.py  server.py  vfs_tools.py  workspace_manager.py  workspace_tools.py
tests/: __init__.py  conftest.py  test_checkpoint_manager.py  test_checkpoint_tools.py  test_server.py  test_vfs_tools.py  test_workspace_manager.py  test_workspace_tools.py
