[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chuk-mcp-vfs"
version = "0.1.0"
description = "MCP server for virtual filesystem workspaces with checkpoints and FUSE mounting"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Chris Hay", email = "chrishayuk@somejunkmailbox.com"},
]
keywords = ["mcp", "filesystem", "virtual", "sandbox", "workspace", "checkpoint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: System :: Filesystems",
]

dependencies = [
    "chuk-virtual-fs>=0.3.1",
    "chuk-artifacts>=0.9.1",
    "chuk-mcp-server>=0.8",
]

[project.optional-dependencies]
mount = [
    "pyfuse3>=3.3.0; sys_platform != 'win32'",
    "winfspy>=0.6.0; sys_platform == 'win32'",
]
dev = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.21.0,<0.25.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.6.0",
    "mypy>=1.8.0",
    "types-PyYAML>=6.0.0",
]

[project.scripts]
chuk-mcp-vfs = "chuk_mcp_vfs.server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["chuk_mcp_vfs*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
python_files = "test_*.py"
python_functions = "test_*"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP", "SIM"]
ignore = ["E501", "B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "chuk_mcp_vfs.server"
disable_error_code = ["arg-type"]

[dependency-groups]
dev = [
    "pytest-asyncio>=0.24.0",
]
